# urirun-multiplatform-test

./: .gitignore  README.md  local.dev.txt  pyproject.toml
.github/workflows/: multiplatform.yml  self-hosted-examples.yml
.urirun/: discovered-registry.json  scheme-index.json
docker/compose/: docker-compose.yml  python-node.Dockerfile
docker/desktop-pc/: Dockerfile  compose.yml  entrypoint.sh
docker/linux/: Dockerfile
docs/: IMPLEMENTED.md  TODO.md  TODO_EXECUTION_STATUS.md  VALIDATION_REPORT.md  ci-verification.md  docker-compose-matrix.md  gui-test-contract.md  main-repo-trigger-workflow.md  multiplatform-e2e-design.md
docs/external-contracts/: get-urirun-com.md  main-urirun.md  production-promotion.md
docs/self-hosted-runners/: linux.md  macos.md  windows.md  workflow-examples.md
fixtures/: registry.json
scripts/: bootstrap.py  ci_summary.py  collect_report.py  install_urirun.py  run_tests.py  validate_repo.py
tests/: conftest.py  deployment_bundle.py  gui_utils.py  local_dev_site.py  process_utils.py  test_cli_basic.py  test_cli_extended.py  test_connectors.py  test_deployment_bundle_helpers.py  test_desktop_kvm.py  test_error_reporting.py  test_get_urirun_install_flow.py  test_get_urirun_site.py  test_gui_error_policy.py  test_gui_user_journey.py  test_installation.py  test_local_dev_site.py  test_mesh_host.py  test_paths.py  test_permissions.py  test_product_artifacts_deployment.py  test_registry.py  test_reporting_scripts.py  test_shells.py  test_transports.py
